arg: Include headers for std::abs()

Required for compiling with clang on macOS.

https://bugzilla.gnome.org/show_bug.cgi?id=780350